--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
         </div>
         <div id="news" class="intro">
             <div class="bt" >
-                <h3>mySwing™挥杆宝中国市场产品首发新闻发布会<br><span class="time">Mar 15, 2013</span></h3>
+                <h3>mySwing™挥杆宝中国市场产品首发新闻发布会<br><span class="time">Mar 14th</span></h3>
                 <p>
                     2013年3月15日（周五）14：30在北京湾会高尔夫俱乐部举行
                 </p>
@@ -104,19 +104,19 @@
                 <div class="clear"></div>
             </div>
             <div class="bt">
-                <h3>Meet us at the 2013 China Golf Show in Beijing<br><span class="time">Mar. 22 -24,2013</span></h3>
+                <h3>Meet us at the 2013 China Golf Show in Beijing<br><span class="time">Mar 16th</span></h3>
                 <p>China Golf Show (CGS) will be held from March 22nd to 24th at the China National Convention Center in Beijing. Welcome to Noitom booth No.E1072.</p>
                 <img src="images/news2.png" width="650px">
                 <div class="clear"></div>
             </div>
             <div class="bt">
-                <h3>Download mySwing™ Android App<br><span class="time">Mar. 22 -24,2013</span></h3>
+                <h3>Download mySwing™ Android App</h3>
                 <p>Please download the free mySwingTM Android App <a href="http://www.noitom.com/download/myswing.apk">here</a> </p>
                 <img src="images/news1.png" width="650px">
                 <div class="clear"></div>
             </div>
             <div class="bt">
-                <h3>Download mySwing™ iOS App<br><span class="time">Mar. 22 -24,2013</span></h3>
+                <h3>Download mySwing™ iOS App</h3>
                 <p>Please download the free mySwingTM iOS App <a href="https://itunes.apple.com/cn/app/myswing/id560946532?mt=8">here</a> </p>
                 <img src="images/news3.png" width="650px">
                 <div class="clear"></div>
