--- a/products.html
+++ b/products.html
@@ -100,17 +100,17 @@
                     <img id="showimg" src="images/myswingpro.png">
                 </div>
                 <div  class="imghand">
-                    <a onclick="showItem('ios')"><img src="images/hios.gif"></a><a onclick="showItem('basic')"><img src="images/hbasic.gif" ></a><a onclick="showItem('wtb')"><img src="images/hbasic.gif" ></a><a href="support.html"><img src="images/hbasic.gif" ></a>
+                    <a onclick="showItem('ios')"><img src="images/hios.png"></a><a onclick="showItem('wtb')"><img src="images/wtb.png" ></a><a href="support.html"><img src="images/faq.png" ></a><a href="support.html"><img src="images/download.png" ></a><a href="support.html"><img src="images/video.png" ></a>
                 </div>
                 <div class="weibo">
-                    <span>Sina Weibo:</span><a target="_blank" href="http://weibo.com/u/3108576147"></a>
+                    <span>Weibo:</span><a target="_blank" href="http://weibo.com/u/3108576147"></a>
                 </div>
                 <div class="clear"></div>
             </div>
             <h3>mySwing™</h3>
             <div class="leftcont">
                 <p>
-                    mySwing™ is a portable golf swing analyzer. It is a smart device attached to the golf club measuring the entire club swing motion.
+                    mySwing™ is a portable golf swing analyzer. It is a smart device attached to the golf club measuring the entire club swing motion. The swing data will wirelessly be transmitted to a smart phone or handle Pad to graphically display the swing motion data. When the club is swung, the sensor automatically picks up the motion data and forwards the data to a smart phone or a smart Pad (iOS or Android). The user can check his/her performance immediately after each swing or review the swing history anytime.
                 </p>
                 <p>
                     Inside the device is an inertial sensor module integrating a set of high precision MEMS sensor chips, such as gyroscope, accelerometer, and digital compass.
@@ -118,105 +118,8 @@
                 <p>
                     The inertial sensor module of mySwing™ is a specialized version of what is used in Noitom’s full body motion capture system.
                 </p>
-                <p>
-                    There are two versions of mySwing™: mySwing™ Basic and mySwing™ iOS . mySwing™ Basic uses an LCD receiver while mySwing™ iOS uses iPhone/iPad to wirelessly receive and display the swing motion data.
-                </p>
             </div>
             <div class="clear"></div>
-            <div id="basic" class="intro" >
-                <a name="basic"></a>
-                <h4>mySwing™ Basic</h4>
-                <div class="leftcont fl" style="width: 300px">
-                    <p>
-                        mySwing™ Basic consists of an inertial sensor module and a wireless LCD receiver.
-                    </p>
-                    <p>
-                        When the club is swung, the sensor automatically picks up the motion data and forwards the data to the receiver
-                    </p>
-                    <p>
-                        The receiver extracts the club head speed and swing tempo, and displays the data on screen
-                    </p>
-                    <p>
-                        Club head speed at impact
-                    </p>
-                    <p>
-                        Golf club head speed is one of the most important measures of a swing and is directly related to the carry distance of the ball
-                    </p>
-                    <p>
-                        Swing tempo
-                    </p>
-                    <p>
-                        Good golfers have steady upswing and downswing tempos. An upswing and downswing tempo ratio of 3:1 is considered good
-                        for most golfers. If a user maintains a 3:1 ratio, the faster the downswing tempo, the better the swing.
-                    </p>
-                </div>
-                <div class="rightcont fr">
-                    <img src="images/basic1.jpg">
-                    <img src="images/basic2.jpg">
-                    <img src="images/basic3.jpg">
-                    <div class="clear"></div>
-                </div>
-                <div class="clear"></div>
-                <h4>mySwing™ Basic Features</h4>
-                <table cellpadding="2">
-                    <tr>
-                        <td width="100px">Club head speed</td>
-                        <td>Club head speed determines the carry distance. With mySwing™, you will know exactly your club head speed for each swing.</td>
-                    </tr>
-                    <tr>
-                        <td>Tempo </td>
-                        <td>Consistent and smooth tempo is critical. Knowing the tempo helps you better understand your swing </td>
-                    </tr>
-                    <tr>
-                        <td>Accessibility </td>
-                        <td>You don’t have to have a smart phone or download any Apps.</td>
-                    </tr>
-                    <tr>
-                        <td>Fast and accurate </td>
-                        <td>A high performance CPU chip is embedded in the sensor module. With the optimized algorithm, mySwing™ can detect and analyze your swing data accurately and promptly.</td>
-                    </tr>
-                    <tr>
-                        <td>Auto scrolling </td>
-                        <td>The LCD display will automatically loop over the key measurements so that you can focus on your swing and your hands never have to leave the club.</td>
-                    </tr>
-                    <tr>
-                        <td>Light-weight </td>
-                        <td>The sensor module is very small and light, weighings only 17 gram. You won’t even feel it on the club.</td>
-                    </tr>
-                    <tr>
-                        <td>Operation</td>
-                        <td>Very simple operation: select club type and then swing.</td>
-                    </tr>
-                    <tr>
-                        <td>Long battery life</td>
-                        <td>A fully charged sensor module can support 3 hours of continuous swing. If no swing action or any operation is detected in 5 minutes, the sensor module will automatically hibernate to save battery.</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Reference card
-                        </td>
-                        <td>
-                            A reference card is provided for you to check the club head speed vs. carry distance. The card also serves as an alignment tool.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Velcro strap
-                        </td>
-                        <td>
-                            The Velcro strap design makes it easy to fasten the sensor to any club shaft. A spare strap is provided.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Nylon pouch
-                        </td>
-                        <td>
-                            The package comes with a nylon bag, which can hold the mySwing™ sensor and its accessories
-                        </td>
-                    </tr>
-                </table>
-            </div>
             <div id="ios" class="intro">
                 <a name="ios"></a>
                 <h4>mySwing™ iOS</h4>
@@ -385,7 +288,7 @@
                         <td>
                             <ul>
                                 <li>
-                                    The Mfi license is issued, by Apple, to certify electronic accessory developers whose products are specifically tailored to iPod, iPhone or iPad and have met Apple’s performance standards.
+                                    The Mfi license is issued, by Apple, to certify electronic accessory developers whose products are specifically tailored to iPod, iPhone or iPad and have met Apple’s performance standards
                                 </li>
                             </ul>
                         </td>
@@ -808,7 +711,7 @@
 <!--<div id="totop" class="back2Top" style="display: block;"></div>-->
 <script type="text/javascript" src="js/utils.js"></script>
 <script type="text/javascript">
-    var arr = ["basic","ios"];
+    var arr = ["wtb","ios"];
     function hideItmes(){
         for(var i= 0,item;item=arr[i++];){
             document.getElementById(item).style.display = "none";
