--- a/products.html
+++ b/products.html
@@ -100,7 +100,7 @@
                     <img id="showimg" src="images/myswingpro.png">
                 </div>
                 <div  class="imghand">
-                    <a onclick="showItem('ios')"><img src="images/hios.png"></a><a onclick="showItem('wtb')"><img src="images/wtb.png" ></a><a href="support.html"><img src="images/faq.png" ></a><a href="support.html"><img src="images/download.png" ></a><a href="support.html"><img src="images/video.png" ></a>
+                    <a onclick="showItem('ios')"><img src="images/hios.png"></a><a onclick="showItem('wtb')"><img src="images/wtb.png" ></a><a href="support.html?news"><img src="images/faq.png" ></a><a href="support.html"><img src="images/download.png" ></a><a href="support.html"><img src="images/video.png" ></a>
                 </div>
                 <div class="weibo">
                     <span>Weibo:</span><a target="_blank" href="http://weibo.com/u/3108576147"></a>
@@ -297,75 +297,7 @@
             </div>
             <div id="wtb" class="intro">
                    <a name="wtb"></a>
-                   <h4>US</h4>
-                   <p>
-                       <a href="http://www.dwquailgolf.com/golf-training-aids/mySwing-iOS-Golf-Swing-Analyzer.html" style="text-decoration: underline">US online sales</a>
-                   </p>
-                   <h4>China</h4>
-                   <h5>Beijing</h5>
-                   <p>
-                       思莱斯高尔夫<br>
-                       地址：丰台区玉泉营桥东南角草桥实业总公司南侧50米<br>
-                       电话：010 87508406<br>
-                   </p>
-                   <p>
-                       湖畔青蛙高尔夫俱乐部<br>
-                       地址：北京市朝阳区博大路水库公园内<br>
-                       电话：18601116167<br>
-                   </p>
-                   <p>
-                       Benec高尔夫工房鸿华店<br>
-                       地址：北京朝阳区大屯路108号鸿华高尔夫练习场内<br>
-                       电话：010 64930287<br>
-                   </p>
-                   <p>
-                       宇力高尔夫<br>
-                       地址：三元桥往北三环路上京承高速，穿过四环路后第二个出口：利泽西街望京出口下高速，10米右手北小河公园大铁门进门，G Max高尔夫练习场内。宇力高尔夫工房<br>
-                       电话：010 64705970<br>
-                   </p>
-                    <p>
-                        新华高尔夫大郊亭店<br>
-                        地址： 北京市朝阳区东四环大郊亭桥西南角<br>
-                        电话：18611610588，010-87756511<br>
-                    </p>
-                    <p>
-                        新华高尔夫湾会练习场店<br>
-                        地址：北京市朝阳区广百东路2号新华高尔夫湾会练习场店<br>
-                        电话：18610052005<br>
-                    </p>
-                    <p>
-                        龙缘高尔夫俱乐部专卖店<br>
-                        地址：朝阳区朝阳北路东高路口南300米<br>
-                        电话：陶子安 13810839125<br>
-                    </p>
-                   <p>
-                       精准高尔夫工房<br>
-                       地址：海淀区清河路155号清河湾高尔夫俱乐部东练习场<br>
-                       电话：陶子安13810839125<br>
-                   </p>
-                <p>
-                    美松高尔夫 <br>
-                    地址：朝阳区高碑店兴隆西街十号   <br>
-                    电话：010-85755497   010-85753959<br>
-                </p>
-                <p>
-                    天一高尔夫俱乐部 <br>
-                    地址： 北京市海淀区四季青东盘冉村886号 <br>
-                    电话 ：15011111560<br>
-                </p>
-                    <p>
-                        Mission Hills Golf Club, Shenzhen<br>
-                        Address: No.1 Mission Hills Road, Shenzhen, China<br>
-                        Tel: (+86 755) 2802 0888<br>
-                    </p>
-                    <p>
-                        Mission Hills Golf Club, Dongguan<br>
-                        Address: Lin Ping Road, Daping, Tangxia, Dongguan, China<br>
-                        Tel: (+86 769) 8728 8888<br>
-                    </p>
-                    <h5>
-                        HK
-                    </h5>
+                    <h5>HK</h5>
                 <p>
                     Central Pro-Shop<br>
                     Shop 106, 1/F, Hutchison House 10 Harcourt Road, Central, HK<br>
