--- a/support.html
+++ b/support.html
@@ -82,13 +82,13 @@
             </div>
             <div id="myswing">
                 <h4>Download: </h4>
-                <p>
-                    <img src="images/androiddown.png">
-                </p>
-                <p>Please download the free mySwingTM Android App <a href="http://www.noitom.com/download/myswing.apk" style="text-decoration: underline;">here</a></p>
                 <p>Please download the free mySwingTM iOS App <a href="https://itunes.apple.com/cn/app/myswing/id560946532?mt=8" style="text-decoration: underline;">here</a></p>
                 <p>
                     <a href="https://itunes.apple.com/app/id560946532?mt=8"><img src="images/support.png" ></a>
+                </p>
+                <p>Please download the free mySwingTM Android App <a href="http://www.noitom.com/download/myswing.apk" style="text-decoration: underline;">here</a></p>
+                <p>
+                    <img src="images/androiddown.png">
                 </p>
                 <h4>Video:</h4>
                 <p>
@@ -575,7 +575,7 @@
         ©  Copyright  2012 Noitom Ltd. All rights reserved
     </div>
 </div>
-<div id="totop" class="back2Top" style="display: block;">返回</div>
+<div id="totop" class="back2Top" style="display: block;">Back</div>
 <script type="text/javascript" src="js/utils.js"></script>
 <script type="text/javascript">
     var conts = ["nocp","myswing","imu"];
@@ -597,7 +597,7 @@
     hideConts();
         new ToTop("totop",{
             click:function(){
-                location.href="products.html";
+                location.href="products.html?news";
             }
         })
 
